--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ dj-rest-auth==2.2.5
 Django==4.1.2
 django-allauth==0.51.0
 django-cors-headers==3.13.0
+django-debug-toolbar==3.7.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 idna==3.4
