--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,9 @@ django-debug-toolbar==3.7.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 idna==3.4
+install==1.3.5
 oauthlib==3.2.2
-psycopg2==2.9.5
+psycopg2-binary==2.9.5
 pycparser==2.21
 PyJWT==2.6.0
 python3-openid==3.2.0
